# mcp2-toolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/: SECURITY.md
.github/workflows/: ci.yml
mcp2_toolbox/: cli.py
tests/: __init__.py  test_cli.py
