[metadata]
name = mcp2-toolbox
version = 0.1.0
description = MemCard Pro 2 helper tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Console Hax
author_email = console-hax@example.com
url = https://github.com/console-hax/mcp2-toolbox
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Tools
    Topic :: System :: Hardware

[options]
packages = find:
python_requires = >=3.7
install_requires =
    zeroconf>=0.132.2,<1.0.0
    requests>=2.32.3,<3.0.0
    psutil>=6.0.0,<7.0.0
    PyYAML>=6.0.2,<7.0.0

[options.extras_require]
dev =
    pytest>=7.0.0,<8.0.0
    pytest-cov>=4.0.0,<5.0.0
    black>=23.0.0,<24.0.0
    flake8>=6.0.0,<7.0.0
    mypy>=1.0.0,<2.0.0

[options.entry_points]
console_scripts =
    mcp2-toolbox = mcp2_toolbox.cli:main

[options.package_data]
* = *.txt, *.md, *.yml, *.yaml

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True



